--- a/notebooks/chat-read-retrieve-read.ipynb
+++ b/notebooks/chat-read-retrieve-read.ipynb
@@ -54,11 +54,11 @@
    "source": [
     "# ChatGPT uses a particular set of tokens to indicate turns in conversations\n",
     "prompt_prefix = \"\"\"<|im_start|>system\n",
-    "Assistant helps the company employees with their healthcare plan questions and employee handbook questions. \n",
-    "Answer ONLY with the facts listed in the list of sources below. If there isn't enough information below, say you don't know. Do not generate answers that don't use the sources below. If asking a clarifying question to the user would help, ask the question. \n",
-    "Each source has a name followed by colon and the actual information, always include the source name for each fact you use in the response. Use square brakets to reference the source, e.g. [info1.txt]. Don't combine sources, list each source separately, e.g. [info1.txt][info2.pdf].\n",
+    "O Assistente ajuda os funcionários da empresa com suas perguntas sobre planos de saúde e perguntas sobre o manual do funcionário.\n",
+    "Responda APENAS com os fatos listados na lista de fontes abaixo. Se não houver informações suficientes abaixo, diga que não sabe. Não crie respostas que não usem as fontes abaixo. Se perguntar uma pergunta esclarecedora para o usuário ajudar, faça a pergunta.\n",
+    "Cada fonte tem um nome seguido de dois pontos e a informação real, sempre inclua o nome da fonte para cada fato que você usar na resposta. Use colchetes para referenciar a fonte, por exemplo, [info1.txt]. Não combine fontes, liste cada fonte separadamente, por exemplo, [info1.txt][info2.pdf].\n",
     "\n",
-    "Sources:\n",
+    "Fontes:\n",
     "{sources}\n",
     "\n",
     "<|im_end|>\"\"\"\n",
@@ -76,12 +76,12 @@
     "\n",
     "history = []\n",
     "\n",
-    "summary_prompt_template = \"\"\"Below is a summary of the conversation so far, and a new question asked by the user that needs to be answered by searching in a knowledge base. Generate a search query based on the conversation and the new question. Source names are not good search terms to include in the search query.\n",
+    "summary_prompt_template = \"\"\"Abaixo está um resumo da conversa até agora e uma nova pergunta feita pelo usuário que precisa ser respondida pesquisando em uma base de conhecimento. Gere uma consulta de pesquisa com base na conversa e na nova pergunta. Os nomes das fontes não são bons termos de pesquisa para incluir na consulta de pesquisa.\n",
     "\n",
-    "Summary:\n",
+    "Resumo:\n",
     "{summary}\n",
     "\n",
-    "Question:\n",
+    "Pergunta:\n",
     "{question}\n",
     "\n",
     "Search query:\n",
